# recontext

./: .env.example  .gitignore  AGENTS.md  README.md  data  pyproject.toml
EnsembleAI2026-starter-kit/: .gitignore  README.md  baselines.py  prepare_data.sh  pyproject.toml
EnsembleAI2026-starter-kit/data/: answers-python-practice.jsonl  python-practice.jsonl  python-start.jsonl
EnsembleAI2026-starter-kit/predictions/: python-practice-random.jsonl
src/: config.py  create_context.py  eval.py  setup_rag.py  test_completion.py  test_create_repo_context.py  test_local_model_connection.py  test_rag.py
src/eval/: filler.py
src/llm/: __init__.py  client.py  settings.py
src/prompts/: rag_queries.py  regex_queries.py
src/rag/: __init__.py  embeddings.py  repository.py  settings.py  vector_store.py
src/regex_search/: __init__.py  repository.py  search.py  settings.py
src/semantic-tree/: file_sampler.py  semantic_chunk_extractor.py  utils.py
src/utils/: context_files.py  context_snippets.py  file_sampler.py  repos.py
