[project]
name = "recontext"
version = "0.1.0"
description = ""
authors = [
    {name = "Denys Yarkin",email = "den.s1eap@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.11,<2.0.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "chromadb (>=1.5.5,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
